--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "authentication",
   "version": "1.0.0",
   "description": "authentication server",
-  "main": "index.js",
+  "type": "module",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
